azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {},
  "variables": {
    "baseTemplateUrl": "https://raw.githubusercontent.com/linuxacademy/content-openshift-origin-azure/master/",
    "baseVMachineTemplateUriInfranode": "[concat(variables('baseTemplateUrl'), 'infranode.json')]",
    "baseVMachineTemplateUriNode": "[concat(variables('baseTemplateUrl'), 'node.json')]",
    "baseVMachineTemplateUriMaster": "[concat(variables('baseTemplateUrl'), 'master.json')]",
    "baseVMachineTemplateUriJumpBox": "[concat(variables('baseTemplateUrl'), 'jumpbox.json')]",
    "adminUsername": "azureuser",
    "adminPassword": "ChangeMe123!",
    "sshKeyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDiUArYdiOpKBDZJbEdsaNt5MhpxQijUQs0Z/eO70B1uR0qGhps3mk9Q4SVUtVNkrZMqOAKNTBZf31YzkSccWIEt3ajlxtTrZrLrA8qABCBWrv50O4SRUblIwBilb69NLWH9oPYN6pzDXzh702ENYk0a/kbyYoZhPZaBv34edMDTu6XFK1KRx5xeord88zwh+lf+oO/ZIWYtxoYErb7Fomfu/e0afsqMGxCt9G97fSw9HgvQ0lN4MR66sSIhkcMfvY3b8SqS/YqFPciqfOD1nyXFtoxv4A1Pjua+9zhDEyL/yiXYSPfnLwvypPI/DoM6syrz1VAGmuealw8IKzTdUcP",
    "masterDnsName": "",
    "numberOfMasterNodes": 1,
    "masterVMSize": "Standard_B1ms",
    "masterVMstorType": "Standard_LRS",
    "numberOfInfraNodes": 1,
    "infranodeVMSize": "Standard_B1ms",
    "infranodeVMstorType": "Standard_LRS",
    "numberOfNodes": 1,
    "nodeVMSize": "Standard_B1ms",
    "nodeVMstorType": "Standard_LRS",
    "jumpVMSize": "Standard_B1ms",
    "jumpVMstorType": "Standard_LRS",
    "image": "centos",
    "location": "[resourceGroup().location]",
    "virtualNetworkName": "openshiftVnet",
    "addressPrefix": "10.41.0.0/16",
    "infranodesubnetName": "infranodeSubnet",
    "infranodeSubnetNSGName": "infraSubnetNSG",
    "infranodesubnetPrefix": "10.41.2.0/24",
    "infrapipname": "infraPip",
    "infrapipaddresstype": "Static",
    "infralbName": "infraLB",
    "infralbid": "[resourceId('Microsoft.Network/loadBalancers', variables('infralbName'))]",
    "infraASName": "infraAS",
    "jumpnodesubnetName": "jumpBoxSubnet",
    "jumpnodesubnetNameNSG": "jumpBoxSubnetNSG",
    "jumpnodesubnetPrefix": "10.41.3.0/24",
    "nodesubnetName": "nodeSubnet",
    "nodesubnetPrefix": "10.41.1.0/24",
    "mastersubnetName": "masterSubnet",
    "mastersubnetNSGName": "masterSubnetNSG",
    "mastersubnetPrefix": "10.41.0.0/24",
    "masterpipname": "masterPip",
    "masterppipaddresstype": "Dynamic",
    "masterlbName": "masterLB",
    "masterlbid": "[resourceId('Microsoft.Network/loadBalancers', variables('masterlbName'))]",
    "masterASName": "masterAS",
    "apiVersion": "2015-06-15",
    "infranodeStorageName": "[concat(uniqueString(resourceGroup().id), 'infranodesa')]",
    "nodeStorageName": "[concat(uniqueString(resourceGroup().id), 'nodesa')]",
    "masterStorageName": "[concat(uniqueString(resourceGroup().id), 'mastersa')]",
    "vhdStorageType": "Standard_LRS",
    "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
    "infranodeSubnetRef": "[concat(variables('vnetId'), '/subnets/', variables('infranodesubnetName'))]",
    "nodeSubnetRef": "[concat(variables('vnetId'), '/subnets/', variables('nodesubnetName'))]",
    "jumpboxSubnetRef": "[concat(variables('vnetId'), '/subnets/', variables('jumpnodesubnetName'))]",
    "nodesASName": "nodesAS",
    "masterSubnetRef": "[concat(variables('vnetId'), '/subnets/', variables('mastersubnetName'))]",
    "centos": {
      "publisher": "Openlogic",
      "offer": "CentOS",
      "sku": "7.2",
      "version": "latest"
    },
    "rhel": {
      "publisher": "RedHat",
      "offer": "RHEL",
      "sku": "7.2",
      "version": "latest"
    }
  },
  "resources": [
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualNetworkName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mastersubnetNSGName'))]"
      ],
      "tags": {
        "displayName": "VirtualNetwork"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('infranodesubnetName')]",
            "properties": {
              "addressPrefix": "[variables('infranodesubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('infranodeSubnetNSGName'))]"
              }
            }
          },
          {
            "name": "[variables('nodesubnetName')]",
            "properties": {
              "addressPrefix": "[variables('nodesubnetPrefix')]"
            }
          },
          {
            "name": "[variables('mastersubnetName')]",
            "properties": {
              "addressPrefix": "[variables('mastersubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mastersubnetNSGName'))]"
              }
            }
          },
          {
            "name": "[variables('jumpnodesubnetName')]",
            "properties": {
              "addressPrefix": "[variables('jumpnodesubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpnodesubnetNameNSG'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('mastersubnetNSGName')]",
      "tags": {
        "displayName": "NetworkSecurityGroup-Master"
      },
      "apiVersion": "[variables('apiVersion')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-ssh",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
          {
            "name": "default-allow-openshift-master",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2000,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('infranodeSubnetNSGName')]",
      "tags": {
        "displayName": "NetworkSecurityGroup-Infra"
      },
      "apiVersion": "[variables('apiVersion')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-openshift-router-http",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
          {
            "name": "default-allow-openshift-router-https",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2000,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('jumpnodesubnetNameNSG')]",
      "tags": {
        "displayName": "NetworkSecurityGroup-Jumpbox"
      },
      "apiVersion": "[variables('apiVersion')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-ssh",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "name": "[concat('node', copyindex())]",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2013-03-01",
      "copy": {
        "name": "nodeSet",
        "count": "[variables('numberOfNodes')]"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('baseVMachineTemplateUriNode')]",
          "contentVersion": "1.0.0.0"
        },
        "variables": {
          "vmName": "[concat('node', padLeft(add(copyindex(), 1), 2, '0'))]",
          "vhdStorageType": "[variables('nodeVMstorType')]",
          "subnetRef": "[variables('nodeSubnetRef')]",
          "ASName": "[variables('nodesASName')]",
          "vmSize": "[variables('nodeVMSize')]",
          "adminUsername": "azureuser",
          "sshKeyData": "[variables('sshKeyData')]",
          "baseTemplateUrl": "[variables('baseTemplateUrl')]",
          "imageReference": "[variables(variables('image'))]"
          }
        }
      },
    {
      "name": "jumpbox",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2013-03-01",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[variables('masterlbid')]",
        "[resourceId('Microsoft.Resources/deployments', 'master0')]",
        "[resourceId('Microsoft.Resources/deployments', 'infranode0')]",
        "[resourceId('Microsoft.Resources/deployments', 'node0')]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('baseVMachineTemplateUriJumpBox')]",
          "contentVersion": "1.0.0.0"
        },
        "variables": {
          "vmName": "jumpbox",
          "subnetRef": "[variables('jumpboxSubnetRef')]",
          "vmSize": "[variables('jumpVMSize')]",
          "vhdStorageType": "[variables('jumpVMstorType')]",
          "adminUsername": "azureuser",
          "sshKeyData": "[variables('sshKeyData')]",
          "baseTemplateUrl": "[variables('baseTemplateUrl')]",
          "imageReference": "[variables(variables('image'))]",
          "fqdn": "[reference(variables('masterpipname')).dnsSettings.fqdn]",
          "routerExtIP": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('infrapipname'))).ipAddress]",
          "numberOfNodes": "[variables('numberOfNodes')]",
          "numberOfMasterNodes": "[variables('numberOfMasterNodes')]",
          "numberOfInfraNodes": "[variables('numberOfinfrasndes')]"
          }
        }
      },
    {
      "name": "[concat('master', copyIndex())]",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2013-03-01",
      "copy": {
        "name": "masterLoop",
        "count": "[variables('numberOfMasterNodes')]"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[resourceId('Microsoft.Compute/availabilitySets', variables('masterASName'))]",
        "[variables('masterlbid')]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('baseVMachineTemplateUriMaster')]",
          "contentVersion": "1.0.0.0"
        },
        "variables": {
          "vmName": "[concat('master', add(copyindex(), 1))]",
          "subnetRef": "[variables('masterSubnetRef')]",
          "vmSize": "[variables('masterVMSize')]",
          "vhdStorageType": "[variables('masterVMstorType')]",
          "adminUsername": "azureuser",
          "adminPassword": "[variables('adminPassword')]",
          "sshKeyData": "[variables('sshKeyData')]",
          "baseTemplateUrl": "[variables('baseTemplateUrl')]",
          "imageReference": "[variables(variables('image'))]",
          "ASName": "[variables('masterASName')]",
          "backEndAddressPool": "[concat(variables('masterlbid'), '/backendAddressPools/BackendPool')]"
          }
        }
      },
    {
      "name": "[concat('infranode', copyIndex())]",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2013-03-01",
      "copy": {
        "name": "infraLoop",
        "count": "[variables('numberOfinfrasndes')]"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[resourceId('Microsoft.Compute/availabilitySets', variables('infraASName'))]",
        "[variables('infralbid')]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('baseVMachineTemplateUriInfranode')]",
          "contentVersion": "1.0.0.0"
        },
        "variables": {
          "vmName": "[concat('infranode', add(copyindex(), 1))]",
          "vhdStorageType": "[variables('infranodeVMstorType')]",
          "subnetRef": "[variables('infranodeSubnetRef')]",
          "vmSize": "[variables('infranodeVMSize')]",
          "adminUsername": "azureuser",
          "sshKeyData": "[variables('sshKeyData')]",
          "baseTemplateUrl": "[variables('baseTemplateUrl')]",
          "imageReference": "[variables(variables('image'))]",
          "ASName": "[variables('infraASName')]",
          "backEndAddressPool": "[concat(variables('infralbid'), '/backendAddressPools/BackendPool')]"
          }
        }
      },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('masterpipname')]",
      "tags": {
        "displayName": "PIP-Master"
      },
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "[variables('masterppipaddresstype')]",
        "dnsSettings": {
          "domainNameLabel": "[variables('masterDNSName')]"
        }
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('infrapipname')]",
      "tags": {
        "displayName": "PIP-Infra"
      },
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "[variables('infrapipaddresstype')]"
       }
    },
    {
      "name": "[variables('masterASName')]",
      "tags": {
        "displayName": "AvailabilitySet-MasterNodes"
      },
      "type": "Microsoft.Compute/availabilitySets",
      "location": "[resourceGroup().location]",
      "apiVersion": "[variables('apiVersion')]",
      "dependsOn": [],
      "properties": {
        "platformUpdateDomainCount": 5,
        "platformFaultDomainCount": 3
      }
    },
    {
      "name": "[variables('infraASName')]",
      "tags": {
        "displayName": "AvailabilitySet-InfraNodes"
      },
      "type": "Microsoft.Compute/availabilitySets",
      "location": "[resourceGroup().location]",
      "apiVersion": "[variables('apiVersion')]",
      "dependsOn": [],
      "properties": {
        "platformUpdateDomainCount": 5,
        "platformFaultDomainCount": 3
      }
    },
    {
      "name": "[variables('nodesASName')]",
      "tags": {
        "displayName": "AvailabilitySet-Nodes"
      },
      "type": "Microsoft.Compute/availabilitySets",
      "location": "[resourceGroup().location]",
      "apiVersion": "[variables('apiVersion')]",
      "dependsOn": [],
      "properties": {
        "platformUpdateDomainCount": 5,
        "platformFaultDomainCount": 3
      }
    }
  ],
  "outputs": {
    "Openshift Webconsole": {
      "type": "string",
      "value": "[concat('https://', reference(resourceId('Microsoft.Network/publicIPAddresses', variables('masterpipname'))).dnsSettings.fqdn, ':8443')]"
    },
    "Openshift Jumpbox ssh": {
      "type": "string",
      "value": "[concat('ssh -A ', reference('jumpbox').outputs.pip.value)]"
    },
    "Openshift CLI": {
      "type": "string",
      "value": "[concat('oc login ', reference(resourceId('Microsoft.Network/publicIPAddresses', variables('masterpipname'))).dnsSettings.fqdn, ':8443')]"
    },
    "Openshift Router Public IP": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('infrapipname'))).ipAddress]"
    }
  }
}
